--- a/locales/en.json
+++ b/locales/en.json
@@ -507,6 +507,10 @@
         "label": "Your Awesome Art",
         "message": "This can be image, video, audio, 3D model"
       },
+      "Airdrop": {
+        "Airdrop to an address": ""Airdrop NFT to an Address (optional)",
+        "placeholder": "Enter Receipt address"
+      },
       "name": {
         "label": "Name",
         "placeholder": "Enter NFT name",
