--- a/locales/en.json
+++ b/locales/en.json
@@ -978,7 +978,7 @@
     "namePlaceholder": "Full Legal Name",
     "socialsDescription": "Socials will appear on your profile page so that people can easily connect with you.",
     "create": "Create Identity",
-    "Update": "Update Identity"
+    "update": "Update Identity"
   },
   "collapse": {
     "collection": {
